bach-tests/src/sync/snapshots/bach_tests__sync__mpsc__mpsc_reserve_many.snap
---
source: bach-tests/src/sync/mpsc.rs
expression: LOG.check()
---
[
    Start,
    SendStarted {
        task: 1,
    },
    RecvStarted {
        task: 2,
    },
    SendCompleted {
        task: 1,
    },
    RecvCompleted {
        task: 2,
        value: Some(
            0,
        ),
    },
    RecvStarted {
        task: 2,
    },
    RecvCompleted {
        task: 2,
        value: Some(
            1,
        ),
    },
]
